# webgpu

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: build.yml  docs.yml
docs/: api.md  architecture.md  index.md  kernels.md
kernels/wgsl/: tensor_ops.wgsl
kernels/wgsl/aivm/: aivm_anchor.wgsl  aivm_attestation.wgsl  aivm_kernels_common.wgsl  aivm_provenance.wgsl  aivm_transition.wgsl
kernels/wgsl/bridgevm/: bridgevm_kernels_common.wgsl  bridgevm_liquidity.wgsl  bridgevm_message.wgsl  bridgevm_outbox.wgsl  bridgevm_signer.wgsl  bridgevm_transition.wgsl
kernels/wgsl/cevm/: block_stm.wgsl  evm_kernel.wgsl  keccak256.wgsl  state_table.wgsl  tx_validate.wgsl
kernels/wgsl/cevm/quasar/: quasar_wave.wgsl
kernels/wgsl/common/: fp384.wgsl  u64_pair.wgsl
kernels/wgsl/crypto/: attestation.wgsl  blake3.wgsl  bls12_381.wgsl  bn254.wgsl  keccak256.wgsl  kzg.wgsl  mldsa_verify.wgsl  modular.wgsl  poseidon2_bn254.wgsl  poseidon_goldilocks.wgsl  ringtail_ops.wgsl  ringtail_sign.wgsl  ringtail_verify.wgsl  secp256k1.wgsl
kernels/wgsl/dex/: amm_xyk.wgsl
kernels/wgsl/fhe/: blind_rotate_fused.wgsl  bsk_prefetch.wgsl  evm256.wgsl  external_product_batch.wgsl  external_product_fused.wgsl  external_product_streaming.wgsl  fhe_kernels.wgsl  four_step_ntt.wgsl  fused_external_product.wgsl  negacyclic_rotate.wgsl  ntt_four_step.wgsl  ntt_fused_extprod.wgsl  ntt_kernels.wgsl  ntt_unified_memory.wgsl  scheme_switch.wgsl  tfhe_functional_keyswitch.wgsl  tfhe_packing_keyswitch.wgsl  tfhe_sample_extract.wgsl  twiddle_cache.wgsl
kernels/wgsl/gpu/: arange.wgsl  arg_reduce.wgsl  binary.wgsl  binary_two.wgsl  conv.wgsl  copy.wgsl  dex_swap.wgsl  fence.wgsl  fp_quantized.wgsl  fp_quantized_nax.wgsl  gemv.wgsl  gemv_masked.wgsl  layer_norm.wgsl  logsumexp.wgsl  matrix_vector.wgsl  ntt.wgsl  quantized.wgsl  quantized_nax.wgsl  random.wgsl  reduce.wgsl  rms_norm.wgsl  rope.wgsl  scaled_dot_product_attention.wgsl  scan.wgsl  softmax.wgsl  sort.wgsl  ternary.wgsl  unary.wgsl
kernels/wgsl/lattice/: poly_arithmetic.wgsl
kernels/wgsl/mpcvm/: mpcvm_ceremony.wgsl  mpcvm_cggmp21.wgsl  mpcvm_frost.wgsl  mpcvm_kernels_common.wgsl  mpcvm_ringtail.wgsl  mpcvm_transition.wgsl
kernels/wgsl/platformvm/: platformvm_kernels_common.wgsl  platformvm_slashing.wgsl  platformvm_staking.wgsl  platformvm_transition.wgsl  platformvm_validator_set.wgsl
kernels/wgsl/steel/attention/: attention.wgsl  flash.wgsl  paged.wgsl  splitk.wgsl  steel_attention.wgsl  steel_attention_nax.wgsl
kernels/wgsl/steel/conv/: conv.wgsl  conv_channels_first.wgsl  conv_channels_last.wgsl  depthwise.wgsl  steel_conv.wgsl  steel_conv_general.wgsl
kernels/wgsl/steel/gemm/: batched.wgsl  gemm.wgsl  steel_gemm_fused.wgsl  steel_gemm_fused_nax.wgsl  steel_gemm_gather.wgsl  steel_gemm_gather_nax.wgsl  steel_gemm_masked.wgsl  steel_gemm_segmented.wgsl  steel_gemm_splitk.wgsl
kernels/wgsl/xvm/: xvm_asset.wgsl  xvm_kernels_common.wgsl  xvm_membership.wgsl  xvm_roots.wgsl  xvm_utxo.wgsl
src/: webgpu_kernel_loader.cpp  webgpu_plugin.cpp
tests/: CMakeLists.txt  test_binary_ops.cpp  test_crypto_kernels.cpp  test_framework.h  test_reduction_kernels.cpp  test_wgsl_syntax.cpp  webgpu_test_utils.h
